[package]
name = "util-rust"
version = "0.1.0"
authors = ["David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
titlecase = "0.9"
glob = "0.3.0"
lazy_static = "1.4.0"
#serde_derive = "1.0.104"
#serde = "1.0.104"
#serde-xml-rs = "0.3.1"

